--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,9 @@
     <servlet-name>dispatcherServlet</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+  <welcome-file-list>
+    <welcome-file>/WEB-INF/index.html</welcome-file>
+  </welcome-file-list>
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>default</servlet-name>-->
 <!--    <url-pattern>*.css</url-pattern>-->
