--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,7 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
-    <welcome-file>/WEB-INF/index.html</welcome-file>
+    <welcome-file>/welcome</welcome-file>
   </welcome-file-list>
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>default</servlet-name>-->
